Address review comments #3

--- a/templates/message_classification.hbs
+++ b/templates/message_classification.hbs
@@ -2,7 +2,7 @@ You are a message classifier. Your task is to analyze the given message and dete
 Generated at: {{timestamp}}
 Version: {{version}}
 
-Message: {}
+Message: "{{message}}"
 
 Classify the message according to the following instructions:
 label:
